assign codegen, updated scope container, changed target name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.17)
-project(slangParser)
+project(slangCompiler)
 
 set(CMAKE_CXX_STANDARD 20)
 
@@ -20,5 +20,5 @@ add_definitions(${LLVM_DEFINITIONS})
 include_directories(SYSTEM ${LLVM_INCLUDE_DIRS})
 llvm_map_components_to_libnames(llvm_libs support core irreader)
 
-add_executable(slangParser main.cpp Lexer.hpp Lexer.cpp TokenType.hpp Logger.hpp Parser.cpp Parser.hpp AST.cpp AST.hpp Scope.hpp)
-target_link_libraries(slangParser PRIVATE ${llvm_libs})
+add_executable(slangCompiler main.cpp Lexer.hpp Lexer.cpp TokenType.hpp Logger.hpp Parser.cpp Parser.hpp AST.cpp AST.hpp Scope.hpp)
+target_link_libraries(slangCompiler PRIVATE ${llvm_libs})
