--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,28 @@
 cmake_minimum_required(VERSION 3.17)
 project(slangc)
 
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W4")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W4 -O3")
 #set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
 #set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
 #set (CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
 
 set(CMAKE_CXX_STANDARD 20)
 #DEBUG
-message("Building in DEBUG mode.")
-set(LLVM-debug_DIR "C:\\Program Files (x86)\\LLVM-debug\\lib\\cmake\\llvm")
-find_package(LLVM-debug REQUIRED CONFIG)
+if(CMAKE_BUILD_TYPE MATCHES "Debug")
+    message("Building in DEBUG mode.")
+    set(LLVM-debug_DIR "C:\\Program Files (x86)\\LLVM-debug\\lib\\cmake\\llvm")
+    find_package(LLVM-debug REQUIRED CONFIG)
+    message(${LLVM_INCLUDE_DIRS})
+endif()
 #RELEASE
-#message("Building in RELEASE mode.")
-#set(CMAKE_BUILD_TYPE Release)
-#set(LLVM_DIR "D:\\Program Files (x86)\\LLVM\\lib\\cmake\\llvm")
-#find_package(LLVM REQUIRED CONFIG)
-#add_definitions(-DDEBUG=0)
+if(CMAKE_BUILD_TYPE MATCHES "Release")
+    message("Building in RELEASE mode.")
+    set(CMAKE_BUILD_TYPE Release)
+    set(LLVM_DIR "C:\\Program Files (x86)\\LLVM\\lib\\cmake\\llvm")
+    find_package(LLVM 13 REQUIRED CONFIG)
+    message(${LLVM_INCLUDE_DIRS})
+    #add_definitions(-DDEBUG=0)
+endif()
 
 message("Found LLVM ${LLVM_PACKAGE_VERSION}, build type ${LLVM_BUILD_TYPE}")
 list(APPEND CMAKE_MODULE_PATH ${LLVM_DIR})
@@ -29,6 +35,10 @@ add_executable(slangc main.cpp Lexer.hpp Lexer.cpp TokenType.hpp Logger.hpp Pars
 target_link_libraries(slangc PRIVATE ${llvm_libs})
 
 #DEBUG
-#target_compile_definitions(slangc PRIVATE DEBUG=1)
+if(CMAKE_BUILD_TYPE MATCHES "Debug")
+    target_compile_definitions(slangc PRIVATE DEBUG=0)
+endif()
 #RELEASE
-target_compile_definitions(slangc PRIVATE DEBUG=0)
+if(CMAKE_BUILD_TYPE MATCHES "Release")
+    target_compile_definitions(slangc PRIVATE DEBUG=0)
+endif()
