--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.17)
 project(slangc)
 
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W4 -O3")
 #set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
 #set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
 #set (CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
@@ -10,6 +9,7 @@ set(CMAKE_CXX_STANDARD 20)
 #DEBUG
 if(CMAKE_BUILD_TYPE MATCHES "Debug")
     message("Building in DEBUG mode.")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
     set(LLVM-debug_DIR "C:\\Program Files (x86)\\LLVM-debug\\lib\\cmake\\llvm")
     find_package(LLVM-debug REQUIRED CONFIG)
     message(${LLVM_INCLUDE_DIRS})
@@ -17,6 +17,7 @@ endif()
 #RELEASE
 if(CMAKE_BUILD_TYPE MATCHES "Release")
     message("Building in RELEASE mode.")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
     set(CMAKE_BUILD_TYPE Release)
     set(LLVM_DIR "C:\\Program Files (x86)\\LLVM\\lib\\cmake\\llvm")
     find_package(LLVM 13 REQUIRED CONFIG)
