--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -31,3 +31,10 @@ jobs:
     - name: Build
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+
+    - name: Run tests
+      run: >
+        cd ${{github.workspace}}/tests
+        python -m setSlangcPath "${{github.workspace}}/build/slangc.exe"
+        python -m unittest runTests.py
+
