--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install LLVM
-      run: sudo wget https://apt.llvm.org/llvm.sh && sudo bash ./llvm.sh 13 all
+      run: sudo wget https://apt.llvm.org/llvm.sh && sudo bash ./llvm.sh 13 all && sudo apt-get install libgc-dev -y
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
