working on semantic checks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ include_directories(${CMAKE_SOURCE_DIR})
 #DEBUG
 if(CMAKE_BUILD_TYPE MATCHES "Debug")
     message("Building in DEBUG mode.")
-    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+    #set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
     set(LLVM-debug_DIR "D:\\Program Files (x86)\\LLVM-debug\\lib\\cmake\\llvm")
     find_package(LLVM-debug REQUIRED CONFIG)
     message(${LLVM_INCLUDE_DIRS})
@@ -35,7 +35,11 @@ add_definitions(${LLVM_DEFINITIONS})
 include_directories(SYSTEM ${LLVM_INCLUDE_DIRS})
 llvm_map_components_to_libnames(llvm_libs support core irreader TransformUtils Analysis Passes x86asmparser x86codegen x86desc x86info linker)
 
-add_executable(SlangcRefactored main.cpp common.hpp source/SourceBuffer.cpp source/SourceBuffer.hpp CompilerOptions.hpp lexer/Lexer.cpp parser/Parser.cpp parser/Parser.hpp parser/AST.hpp codegen/CodeGenContext.hpp codegen/CodeGen.cpp codegen/CodeGen.hpp parser/Scope.hpp parser/ParseExp.cpp parser/ParseDecl.cpp parser/ParseStmt.cpp parser/AST.cpp analysis/BasicAnalysis.cpp analysis/BasicAnalysis.hpp parser/ASTFwdDecl.hpp)
+add_executable(SlangcRefactored main.cpp common.hpp source/SourceBuffer.cpp source/SourceBuffer.hpp CompilerOptions.hpp lexer/Lexer.cpp parser/Parser.cpp parser/Parser.hpp parser/AST.hpp codegen/CodeGenContext.hpp codegen/CodeGen.cpp codegen/CodeGen.hpp parser/Scope.hpp parser/ParseExpr.cpp parser/ParseDecl.cpp parser/ParseStmt.cpp parser/AST.cpp analysis/Context.cpp analysis/Context.hpp parser/ASTFwdDecl.hpp
+        analysis/Check.cpp
+        analysis/Check.hpp
+        analysis/CheckStmt.cpp
+        analysis/CheckExpr.cpp)
 target_link_libraries(SlangcRefactored PRIVATE ${llvm_libs})
 
 #DEBUG
