--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,8 @@ include_directories(${CMAKE_SOURCE_DIR})
 if(CMAKE_BUILD_TYPE MATCHES "Debug")
     message("Building in DEBUG mode.")
     #set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
-    set(LLVM_DIR "D:\\llvm17debug\\lib\\cmake\\llvm")
+    #set(LLVM_DIR "D:\\llvm17debug\\lib\\cmake\\llvm")
+    set(LLVM_DIR "C:\\llvm-18-debug\\lib\\cmake\\llvm")
     find_package(LLVM REQUIRED CONFIG)
     message(${LLVM_INCLUDE_DIRS})
 endif()
@@ -22,8 +23,9 @@ if(CMAKE_BUILD_TYPE MATCHES "Release")
     message("Building in RELEASE mode.")
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
     set(CMAKE_BUILD_TYPE Release)
-    set(LLVM_DIR "D:\\Program Files (x86)\\LLVM\\lib\\cmake\\llvm")
-    find_package(LLVM 13 REQUIRED CONFIG)
+    #set(LLVM_DIR "D:\\Program Files (x86)\\LLVM\\lib\\cmake\\llvm")
+    set(LLVM_DIR "C:\\llvm-18-release\\lib\\cmake\\llvm")
+    find_package(LLVM REQUIRED CONFIG)
     message(${LLVM_INCLUDE_DIRS})
     #add_definitions(-DDEBUG=0)
 endif()
@@ -42,7 +44,11 @@ add_executable(SlangcRefactored main.cpp common.hpp source/SourceBuffer.cpp sour
         check/CheckExpr.cpp
         check/CheckDecl.cpp
         check/SymbolTable.hpp
-        codegen/CodeGenHelpers.cpp)
+        codegen/CodeGenHelpers.cpp
+        driver/Driver.cpp
+        driver/Driver.hpp
+        log/Logger.hpp
+)
 target_link_libraries(SlangcRefactored PRIVATE ${llvm_libs})
 
 #DEBUG
