applying optimizations and building object file, exe file removed from repo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,25 @@ list(APPEND CMAKE_MODULE_PATH ${LLVM_DIR})
 
 add_definitions(${LLVM_DEFINITIONS})
 include_directories(SYSTEM ${LLVM_INCLUDE_DIRS})
-llvm_map_components_to_libnames(llvm_libs support core irreader TransformUtils Analysis Passes x86asmparser x86codegen x86desc x86info linker)
+
+foreach(target ${LLVM_TARGETS_TO_BUILD})
+    if (TARGET "LLVM${target}CodeGen")
+        list(APPEND targets "${target}CodeGen")
+    endif()
+    if (TARGET "LLVM${target}AsmParser")
+        list(APPEND targets "${target}AsmParser")
+    endif()
+    if (TARGET "LLVM${target}Desc")
+        list(APPEND targets "${target}Desc")
+    endif()
+    if (TARGET "LLVM${target}Info")
+        list(APPEND targets "${target}Info")
+    endif()
+endforeach()
+
+# only x86
+#list(APPEND targets "X86CodeGen" "X86AsmParser" "X86Desc" "X86Info")
+llvm_map_components_to_libnames(llvm_libs support core irreader TransformUtils Analysis Passes ${targets} linker)
 
 add_executable(SlangcRefactored main.cpp common.hpp source/SourceBuffer.cpp source/SourceBuffer.hpp CompilerOptions.hpp lexer/Lexer.cpp parser/Parser.cpp parser/Parser.hpp parser/AST.hpp codegen/CodeGenContext.hpp codegen/CodeGen.cpp codegen/CodeGen.hpp parser/Scope.hpp parser/ParseExpr.cpp parser/ParseDecl.cpp parser/ParseStmt.cpp parser/AST.cpp check/Context.cpp check/Context.hpp parser/ASTFwdDecl.hpp
         check/Check.cpp
@@ -48,6 +66,8 @@ add_executable(SlangcRefactored main.cpp common.hpp source/SourceBuffer.cpp sour
         driver/Driver.cpp
         driver/Driver.hpp
         log/Logger.hpp
+        opt/Optimizer.cpp
+        opt/Optimizer.hpp
 )
 target_link_libraries(SlangcRefactored PRIVATE ${llvm_libs})
 
